[package]
name = "deed-metadata"
version = "0.1.0"
description = "Created by Auguron Systems Inc."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deed_metadata"

[features]
default = ["localnet"]
localnet = []
devnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.25.0"
